Updating Old File for core commit efe29244062e57ec89cc125c6ce94760e04844db

--- a/help/using/docs-updates/docs-2020.md
+++ b/help/using/docs-updates/docs-2020.md
@@ -6,7 +6,7 @@ solution: Audience Manager
 title: Mises à jour de la documentation 2020
 feature: Overview
 translation-type: tm+mt
-source-git-commit: ac593372c24f156ce9e9c85f723637dd616aed87
+source-git-commit: efe29244062e57ec89cc125c6ce94760e04844db
 workflow-type: tm+mt
 source-wordcount: '1097'
 ht-degree: 60%
@@ -33,7 +33,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
 
 | Rubrique | Description |
 |---- |----|
-| [Accessibilité dans l&#39;Audience Manager](../overview/accessibility-in-aam.md) | L&#39;accessibilité se rapporte à une série de fonctions qui rendent un produit logiciel utilisable, avec le moins d&#39;effort possible de la part d&#39;utilisateurs ayant divers handicaps, tels que visuels, auditifs, cognitifs, moteurs ou autres. Pour faciliter l&#39;utilisation de l&#39;Audience Manager pour tous, nous avons développé la prise en charge de plusieurs fonctions d&#39;accessibilité, détaillées dans cet article. |
+| [Accessibilité dans l&#39;Audience Manager](/help/using/overview/accessibility-in-aam.md) | L&#39;accessibilité se rapporte à une série de fonctions qui rendent un produit logiciel utilisable, avec le moins d&#39;effort possible de la part d&#39;utilisateurs ayant divers handicaps, tels que visuels, auditifs, cognitifs, moteurs ou autres. Pour faciliter l&#39;utilisation de l&#39;Audience Manager pour tous, nous avons développé la prise en charge de plusieurs fonctions d&#39;accessibilité, détaillées dans cet article. |
 | [Nom ](/help/using/integration/sending-audience-data/batch-data-transfer-explained/inbound-s3-filenames.md) de fichier S3 entrant et nom de fichier FTP  [entrant](/help/using/integration/sending-audience-data/batch-data-transfer-explained/inbound-ftp-filenames.md) | Nous avons mis à jour les définitions et fourni des exemples pour les champs `DPID` et `DPID_TARGET_DATA_OWNER` dans la syntaxe du nom de fichier. |
 
 ## Août 2020 {#aam-august-updates}
