Updating Old File for core commit c492ed784624cdc40fd0bb4ce60bb886b74d15cd

--- a/help/using/docs-updates/docs-2021.md
+++ b/help/using/docs-updates/docs-2021.md
@@ -6,10 +6,10 @@ solution: Audience Manager
 title: Mises à jour de la documentation 2021
 feature: Overview
 translation-type: tm+mt
-source-git-commit: 04504d4561414f9558a1f1f4db33cbcf535d54af
+source-git-commit: 786eda17b23466379378dda94d5f4fb30eda0156
 workflow-type: tm+mt
-source-wordcount: '176'
-ht-degree: 71%
+source-wordcount: '180'
+ht-degree: 67%
 
 ---
 
@@ -24,4 +24,4 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
 
 | Rubrique | Description |
 |--- |----|
-| [Rapports d’utilisation des activités](/help/using/features/administration/admin-console-migration.md) | La gestion des comptes d’utilisateurs de l’Audience Manager se déplace vers le Adobe Admin Console, pour une expérience plus rationnelle dans l’ensemble de vos solutions d’Adobe. <br> Pour faciliter la migration des utilisateurs, tous les administrateurs d’Audience Manager doivent début de migrer leurs comptes d’utilisateurs vers Adobe Admin Console dès que possible, en suivant les étapes décrites dans cet article. |
+| [Migration des utilisateurs Audiences Manager vers le Admin Console](/help/using/features/administration/admin-console-migration.md) | La gestion des comptes d’utilisateurs de l’Audience Manager se déplace vers le Adobe Admin Console, pour une expérience plus rationnelle dans l’ensemble de vos solutions d’Adobe. <br> Pour faciliter la migration des utilisateurs, tous les administrateurs d’Audience Manager doivent début de migrer leurs comptes d’utilisateurs vers Adobe Admin Console dès que possible, en suivant les étapes décrites dans cet article. |
