Updating Old File for core commit

--- a/help/using/docs-updates/docs-2019.md
+++ b/help/using/docs-updates/docs-2019.md
@@ -25,7 +25,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
 
 | Rubrique | Description |
 |--- |----|
-| [Révision de la documentation d’assistance et de confidentialité de la California Consumer Privacy Act (CCPA)](../overview/data-security-and-privacy/data-privacy.md) | La loi sur la protection des renseignements personnels des consommateurs de la Californie [qui entrera en vigueur le 1er janvier 2020, conférera aux résidents de la Californie de nouveaux droits sur leurs renseignements personnels et imposera des responsabilités en matière de protection des données à certaines entités qui exercent des activités en Californie. <br>](https://www.caprivacy.org/about) <br> L’Audience Manager vous aide à respecter vos obligations en vertu de la réglementation sur la confidentialité, par le biais d’outils de confidentialité tels que le  [Service de ](https://docs.adobe.com/content/help/fr-FR/experience-platform/privacy/home.html) confidentialité de Adobe Experience Platform pour l’accès aux données et la suppression des requêtes. <br><br> Nous avons mis à jour le processus actuel de gestion des  [exclusions ](../overview/data-security-and-privacy/data-privacy-requests.md#opt-out-requests) afin d’inclure l’exclusion de tout identifiant déclaré (par ex. identifiant de gestion de la relation client). Dans le cas d’une exclusion par identifiant déclaré, l’identifiant déclaré et le dernier périphérique lié seront désactivés de la collecte de données d’Audience Manager. Les demandes d’exclusion envoient désormais également des demandes de non-segmentation à [partenaires de destination](../overview/data-security-and-privacy/assets/AAM-Partners-October2019.xlsx) qui prennent en charge cette fonction, à la fois en temps réel et par lot. <br><br> De plus, nous avons remanié notre  [Data Security](../overview/data-security-and-privacy/data-security.md),  [Data Privacy](../overview/data-security-and-privacy/data-privacy.md) et notre documentation  [Data ](../overview/data-security-and-privacy/data-governance.md) Governance, afin de vous permettre de trouver plus facilement les informations nécessaires pour se conformer aux règlements susmentionnés. |
+| [Révision de la documentation d’assistance et de confidentialité de la California Consumer Privacy Act (CCPA)](../overview/data-security-and-privacy/data-privacy.md) | La loi sur la protection des renseignements personnels des consommateurs de la Californie [qui entrera en vigueur le 1er janvier 2020, conférera aux résidents de la Californie de nouveaux droits sur leurs renseignements personnels et imposera des responsabilités en matière de protection des données à certaines entités qui exercent des activités en Californie. <br>](https://www.caprivacy.org/about) <br> L’Audience Manager vous aide à respecter vos obligations en vertu de la réglementation sur la confidentialité, par le biais d’outils de confidentialité tels que le  [Service de ](https://docs.adobe.com/content/help/fr-FR/experience-platform/privacy/home.html) confidentialité de Adobe Experience Platform pour l’accès aux données et la suppression des requêtes. <br><br> Nous avons mis à jour le processus actuel de gestion des  [exclusions ](../overview/data-security-and-privacy/data-privacy-requests.md#opt-out-requests) afin d’inclure l’exclusion de tout identifiant déclaré (par ex. identifiant de gestion de la relation client). Dans le cas d’une exclusion par identifiant déclaré, l’identifiant déclaré et le dernier périphérique lié seront désactivés de la collecte de données d’Audience Manager. Les demandes d’exclusion envoient désormais également des demandes de non-segmentation à [partenaires de destination](../overview/data-security-and-privacy/assets/AAM-Partners-October2019.xlsx) qui prennent en charge cette fonction, à la fois par lot et en temps réel. <br><br> De plus, nous avons remanié notre  [Data Security](../overview/data-security-and-privacy/data-security.md),  [Data Privacy](../overview/data-security-and-privacy/data-privacy.md) et notre documentation  [Data ](../overview/data-security-and-privacy/data-governance.md) Governance, afin de vous permettre de trouver plus facilement les informations nécessaires pour se conformer aux règlements susmentionnés. |
 
 ## Octobre 2019 {#aam-october-updates}
 
