Updating Old File for core commit

--- a/help/using/docs-updates/docs-2017.md
+++ b/help/using/docs-updates/docs-2017.md
@@ -140,7 +140,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/traits/trait-comparison-operators.md"> Utilisation d’opérateurs de comparaison dans le générateur de caractéristiques</a> </p> </td> 
-   <td colname="col2"> <p>Mise à jour des opérateurs de comparaison afin d’identifier correctement ceux qui prennent en charge les expressions régulières. </p> </td> 
+   <td colname="col2"> <p>Mise à jour des opérateurs de comparaison pour identifier correctement ceux qui prennent en charge les expressions régulières. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../features/traits/trait-details-page.md"> Page Détails des caractéristiques</a> </p> </td> 
@@ -239,7 +239,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
  <tbody> 
   <tr> 
    <td colname="col1"><a href="../api/dcs-intro/dcs-api-reference/dcs-error-codes.md"> Codes, messages et exemples d’erreur des serveurs de collecte de données</a> </td> 
-   <td colname="col2"> <p>Ajoute les erreurs de récupération de Profil 200, 201, 202 et 203. </p> </td> 
+   <td colname="col2"> <p>Ajouté les erreurs de récupération de Profil 200, 201, 202 et 203. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p><a href="../api/rest-api-main/aam-api-getting-started.md#api-requirements-recommendations"> Configuration requise et recommandations pour l’API</a> </p> </td> 
