Updating Old File for core commit

--- a/help/using/docs-updates/docs-2015.md
+++ b/help/using/docs-updates/docs-2015.md
@@ -39,7 +39,7 @@ Liste de documentation sur les Audiences Manager nouvelles et révisées publié
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/audience-marketplace/marketplace-data-buyers/marketplace-buyer-billing.md#cost-attribution"> Attribution de la facturation et de l’impression pour les flux de données CPM  </a> </p> </td> 
-   <td colname="col2"> <p>Instructions sur la manière d’attribuer des impressions pour différents flux de données CPM. </p> </td> 
+   <td colname="col2"> <p>Instructions sur la manière d’allouer des impressions pour différents flux de données CPM. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <p> <a href="../features/audience-marketplace/marketplace-data-buyers/marketplace-buyer-billing.md"> Attribution de la facturation et de l’impression pour les flux de données à frais fixes  </a> </p> </td> 
