--- a/help/using/docs-updates/docs-2019.md
+++ b/help/using/docs-updates/docs-2019.md
@@ -5,12 +5,12 @@ seo-title: Mises à jour de la documentation 2019
 solution: Audience Manager
 title: Mises à jour de la documentation 2019
 uuid: 75592371-8e97-440a-9cdc-417498d13d6c
-feature: Overview
+feature: Présentation
 translation-type: tm+mt
-source-git-commit: e05eff3cc04e4a82399752c862e2b2370286f96f
+source-git-commit: 65598677498ede26e4961cd4849c9b655dac38dc
 workflow-type: tm+mt
-source-wordcount: '1404'
-ht-degree: 48%
+source-wordcount: '1400'
+ht-degree: 49%
 
 ---
 
@@ -60,7 +60,7 @@ Il n&#39;y a pas de mises à jour majeures de la documentation à annoncer pour 
 
 | Rubrique | Description |
 |--- |----|
-| [Page d’accueil des destinations](/help/using/features/destinations/destinations-home.md) | Le landing page [Destinations](https://bank.demdex.com/portal/destinations/all) a une nouvelle apparence. Lisez cette page pour en savoir plus sur la nouvelle mise en page. |
+| [Page d’accueil des destinations](/help/using/features/destinations/destinations-home.md) | Le landing page de destination a un nouveau look. Lisez cette page pour en savoir plus sur la nouvelle mise en page. |
 
 ## Mai 2019 {#aam-may-updates}
 
@@ -70,7 +70,7 @@ Il n&#39;y a pas de mises à jour majeures de la documentation à annoncer pour 
 | [Flux de données privés](/help/using/features/audience-marketplace/marketplace-private-feeds.md#set-up-sharing-relationship) | Nous avons amélioré la documentation relative au partage de données propriétaires en utilisant des flux de données privés. Reportez-vous à la nouvelle section Comment configurer la relation de partage entre le fournisseur de données et l’acheteur de données. |
 | [Création d’une source de données sur plusieurs périphériques](/help/using/features/profile-merge-rules/merge-rules-start.md#settings) | Nous avons introduit un nouveau contrôle dans le processus pour créer ou modifier une source de données sur plusieurs périphériques, **Rétention des données pour les ID de client inactifs**. Vous pouvez maintenant définir la période de rétention des données pour les ID de client inactifs, en déterminant la durée pendant laquelle l’Audience Manager conserve les ID de client dans notre base de données après leur dernière consultation sur la plateforme d’Audience Manager. |
 | [Limites d’utilisation](/help/using/features/administration/usage-limits.md) | Nous avons mis à jour la façon dont Audience Manager traite la limite des modèles algorithmiques. Audience Manager compte désormais uniquement les modèles algorithmiques *actifs* par rapport à la limite. |
-| [Intégrations personnalisées des partenaires](/help/using/integration/sending-audience-data/custom-partner-integrations.md) | Cette page répertorie les intégrations personnalisées entre Audience Manager et les partenaires de données. <br> Oracle Data Cloud - L’Audience Manager ingère des cookies et des données d’ID de mobile à partir de Oracle Data Cloud pour Audience Marketplace via des fichiers de données entrants. Les spécifications d’intégration personnalisées décrites sur cette page font uniquement référence aux fichiers de données entrants contenant des ID mobiles (IDFA et ID de périphérique Android). |
+| [Intégrations personnalisées des partenaires](/help/using/integration/sending-audience-data/custom-partner-integrations.md) | Cette page répertorie les intégrations personnalisées entre Audience Manager et les partenaires de données. <br> Cloud de données d’Oracle - L’Audience Manager ingère des cookies et des données d’ID de mobile à partir de l’Oracle Data Cloud pour Audience Marketplace par le biais de fichiers de données entrants. Les spécifications d’intégration personnalisées décrites sur cette page font uniquement référence aux fichiers de données entrants contenant des ID mobiles (IDFA et ID de périphérique Android). |
 
 ## Avril 2019 {#aam-april-updates}
 
