Updating Old File for core commit a480c0581a8ee80317befd68525da37a6dbc5063

--- a/help/using/docs-updates/docs-2021.md
+++ b/help/using/docs-updates/docs-2021.md
@@ -4,21 +4,26 @@ seo-description: Une liste de la documentation nouvelle ou révisée publiée en
 seo-title: Mises à jour de la documentation 2021
 solution: Audience Manager
 title: Mises à jour de la documentation 2021
-feature: Overview
-translation-type: tm+mt
-source-git-commit: 786eda17b23466379378dda94d5f4fb30eda0156
+feature: Présentation
+exl-id: c5b2be85-d805-453a-a5b4-4d32730bd0bc
+source-git-commit: ff493329299c328294fd0f79f5e12a4293d745ad
 workflow-type: tm+mt
-source-wordcount: '180'
-ht-degree: 67%
+source-wordcount: '215'
+ht-degree: 58%
 
 ---
-
 
 # Mises à jour de la documentation 2021 {#documentation-updates}
 
 Une liste de la documentation nouvelle ou révisée publiée en 2021. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
 
 Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.com/content/help/fr-FR/release-notes/experience-cloud/current.html) pour prendre connaissance des modifications apportées à [!DNL Audience Manager] et aux autres solutions d’[!DNL Experience Cloud]. Pour consulter les anciennes notes de mise à jour, reportez-vous à la section [Années précédentes](../docs-updates/docs-2020.md).
+
+## Mai 2021 {#aam-may-updates}
+
+| Rubrique | Description |
+|--- |----|
+| [Code d&#39;erreur système DCS 10](../api/dcs-intro/dcs-api-reference/dcs-error-codes.md) | Nous avons ajouté un nouveau code d&#39;erreur système DCS, qui indique si les caractéristiques de la requête ont été partiellement évaluées ou n&#39;ont pas été évaluées du tout. |
 
 ## Janvier 2021 {#aam-january-updates}
 
