Updating Old File for core commit

--- a/help/using/docs-updates/docs-2021.md
+++ b/help/using/docs-updates/docs-2021.md
@@ -23,10 +23,10 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
 
 | Rubrique | Description |
 |--- |----|
-| [Code d&#39;erreur système DCS 10](../api/dcs-intro/dcs-api-reference/dcs-error-codes.md) | Nous avons ajouté un nouveau code d&#39;erreur système DCS, qui indique si les caractéristiques de la requête ont été partiellement évaluées ou n&#39;ont pas été évaluées du tout. |
+| [Code d’erreur système DCS 10](../api/dcs-intro/dcs-api-reference/dcs-error-codes.md) | Nous avons ajouté un nouveau code d’erreur système DCS, qui indique si les caractéristiques de la requête ont été partiellement évaluées ou n’ont pas du tout été évaluées. |
 
 ## Janvier 2021 {#aam-january-updates}
 
 | Rubrique | Description |
 |--- |----|
-| [Migration des utilisateurs Audiences Manager vers le Admin Console](/help/using/features/administration/admin-console-migration.md) | La gestion des comptes d’utilisateurs de l’Audience Manager se déplace vers le Adobe Admin Console, pour une expérience plus rationnelle dans l’ensemble de vos solutions d’Adobe. <br> Pour faciliter la migration des utilisateurs, tous les administrateurs d’Audience Manager doivent début de migrer leurs comptes d’utilisateurs vers Adobe Admin Console dès que possible, en suivant les étapes décrites dans cet article. |
+| [Audience Manager de la migration des utilisateurs vers Admin Console](/help/using/features/administration/admin-console-migration.md) | La gestion des comptes d’utilisateurs de l’Audience Manager se déplace vers Adobe Admin Console, pour offrir une expérience plus rationalisée dans l’ensemble de vos solutions d’Adobe. <br> Pour faciliter la migration des utilisateurs, tous les administrateurs d’Audience Manager doivent commencer à migrer leurs comptes d’utilisateurs vers Adobe Admin Console dès que possible, en suivant les étapes décrites dans cet article. |
