--- a/help/using/docs-updates/docs-2019.md
+++ b/help/using/docs-updates/docs-2019.md
@@ -1,19 +1,18 @@
 ---
-description: Liste de documents nouveaux ou révisés publiés en 2019 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
-seo-description: Liste de documents nouveaux ou révisés publiés en 2019 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
+description: Liste de la documentation nouvelle ou révisée publiée en 2019 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
+seo-description: Liste de la documentation nouvelle ou révisée publiée en 2019 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
 seo-title: Mises à jour de la documentation 2019
 solution: Audience Manager
 title: Mises à jour de la documentation 2019
 uuid: 75592371-8e97-440a-9cdc-417498d13d6c
-feature: Overview
-translation-type: tm+mt
-source-git-commit: 65598677498ede26e4961cd4849c9b655dac38dc
+feature: Présentation
+exl-id: 3cc664e4-67e8-48b8-980a-db3f3fe327f6
+source-git-commit: 4d3c859cc4dc5294286680b0e63c287e0409f7fd
 workflow-type: tm+mt
 source-wordcount: '1400'
 ht-degree: 49%
 
 ---
-
 
 # Mises à jour de la documentation 2019 {#documentation-updates}
 
@@ -25,59 +24,59 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
 
 | Rubrique | Description |
 |--- |----|
-| [Révision de la documentation d’assistance et de confidentialité de la California Consumer Privacy Act (CCPA)](../overview/data-security-and-privacy/data-privacy.md) | La loi sur la protection des renseignements personnels des consommateurs de la Californie [qui entrera en vigueur le 1er janvier 2020, conférera aux résidents de la Californie de nouveaux droits sur leurs renseignements personnels et imposera des responsabilités en matière de protection des données à certaines entités qui exercent des activités en Californie. <br>](https://www.caprivacy.org/about) <br> L’Audience Manager vous aide à respecter vos obligations en vertu de la réglementation sur la confidentialité, par le biais d’outils de confidentialité tels que le  [Service de ](https://docs.adobe.com/content/help/fr-FR/experience-platform/privacy/home.html) confidentialité de Adobe Experience Platform pour l’accès aux données et la suppression des requêtes. <br><br> Nous avons mis à jour le processus actuel de gestion des  [exclusions ](../overview/data-security-and-privacy/data-privacy-requests.md#opt-out-requests) afin d’inclure l’exclusion de tout identifiant déclaré (par ex. identifiant de gestion de la relation client). Dans le cas d’une exclusion par identifiant déclaré, l’identifiant déclaré et le dernier périphérique lié seront désactivés de la collecte de données d’Audience Manager. Les demandes d’exclusion envoient désormais également des demandes de non-segmentation à [partenaires de destination](../overview/data-security-and-privacy/assets/AAM-Partners-October2019.xlsx) qui prennent en charge cette fonction, à la fois par lot et en temps réel. <br><br> De plus, nous avons remanié notre  [Data Security](../overview/data-security-and-privacy/data-security.md),  [Data Privacy](../overview/data-security-and-privacy/data-privacy.md) et notre documentation  [Data ](../overview/data-security-and-privacy/data-governance.md) Governance, afin de vous permettre de trouver plus facilement les informations nécessaires pour se conformer aux règlements susmentionnés. |
+| [Révision de la documentation d’assistance et de confidentialité de la California Consumer Privacy Act (CCPA)](../overview/data-security-and-privacy/data-privacy.md) | Le [California Consumer Privacy Act (CCPA)](https://www.caprivacy.org/about), qui entrera en vigueur le 1er janvier 2020, accordera aux résidents de Californie de nouveaux droits concernant leurs informations personnelles et imposera des responsabilités en matière de protection des données à certaines entités qui exercent leurs activités en Californie. <br> <br> Audience Manager vous aide à respecter vos obligations en vertu des réglementations de confidentialité, par le biais d’outils de confidentialité tels que  [Adobe Experience Platform Privacy ](https://docs.adobe.com/content/help/fr-FR/experience-platform/privacy/home.html) Service pour les demandes d’accès et de suppression des données. <br><br> Nous avons mis à jour le processus actuel de  [gestion des ](../overview/data-security-and-privacy/data-privacy-requests.md#opt-out-requests) désinscriptions afin d’inclure le désinscription de tout ID déclaré (par exemple, ID CRM). Dans le cas d’une exclusion par identifiant déclaré, l’identifiant déclaré et le dernier appareil lié seront exclus de la collecte de données d’Audience Manager. Les demandes d’exclusion de la collecte de données envoient désormais également des demandes de non-segmentation aux [partenaires de destination](../overview/data-security-and-privacy/assets/AAM-Partners-October2019.xlsx) qui prennent en charge cette fonctionnalité, à la fois par lot et en temps réel. <br><br> De plus, nous avons repensé notre documentation sur la  [sécurité des données](../overview/data-security-and-privacy/data-security.md), la  [confidentialité des données](../overview/data-security-and-privacy/data-privacy.md) et la  [gouvernance des ](../overview/data-security-and-privacy/data-governance.md) données afin de vous permettre de trouver plus facilement les informations nécessaires pour vous conformer aux réglementations mentionnées ci-dessus. |
 
 ## Octobre 2019 {#aam-october-updates}
 
 | Rubrique | Description |
 |--- |----|
-| [Recommandations intelligentes des données d’Audience Marketplace, alimentées par Adobe Sensei](../features/segments/trait-recommendations.md) | Avec Trait Recommendations, lorsque vous créez ou modifiez un segment dans [Créateur de segments](../features/segments/segment-builder.md), vous obtenez maintenant des recommandations sur les caractéristiques supplémentaires que vous pouvez inclure, à partir de flux de données [!UICONTROL Audience Marketplace] auxquels vous n’êtes pas abonné. Ajoutez les caractéristiques recommandées à votre segment pour élargir votre audience cible. <br>  De plus, nous avons repensé la  [!UICONTROL Marketplace] page pour vous faciliter la recherche de caractéristiques similaires et le filtrage des flux de données. |
-| [Outils de gestion en bloc](/help/using/reference/bulk-management-tools/bulk-management-intro.md) | Nous avons publié une nouvelle version de la feuille de calcul de gestion en bloc qui fonctionne sur les systèmes d&#39;exploitation MacOS et Microsoft Windows et prend en charge la connexion des Experience Cloud. |
-| [Améliorations des stratégies de fusion de profil](../features/profile-merge-rules/merge-rules-overview.md) | Nous avons publié une série d&#39;améliorations pour [!UICONTROL Profile Merge Rules] : <ul><li>L’évaluation des segments est désormais prise en charge par lot pour 100 périphériques au maximum.</li><li>Nous avons amélioré la précision des rapports pour les populations de caractéristiques et de segments.</li><li>Nous avons amélioré la précision des fichiers de commandes générés à l&#39;aide d&#39;ID inter-périphériques.</li><li>Nous avons mis à jour la documentation avec des cas d&#39;utilisation plus détaillés pour chaque règle. Voir [Cas d&#39;utilisation générale des règles de fusion de Profils](../features/profile-merge-rules/merge-rule-targeting-options.md), [Cas d&#39;utilisation de graphiques de périphériques externes](../features/profile-merge-rules/external-graph-use-cases.md) et [Cas d&#39;utilisation de graphiques de périphériques de lien de Profil](../features/profile-merge-rules/profile-link-use-case.md).</li></ul> |
+| [Recommandations intelligentes des données d’Audience Marketplace, alimentées par Adobe Sensei](../features/segments/trait-recommendations.md) | Avec Trait Recommendations, lorsque vous créez ou modifiez un segment dans [Créateur de segments](../features/segments/segment-builder.md), vous obtenez désormais des recommandations sur les caractéristiques supplémentaires que vous pouvez inclure, à partir des flux de données [!UICONTROL Audience Marketplace] auxquels vous n’êtes pas abonné. Ajoutez les caractéristiques recommandées à votre segment pour élargir votre audience cible. <br>  De plus, nous avons repensé la  [!UICONTROL Marketplace] page afin que vous puissiez plus facilement trouver des caractéristiques similaires et filtrer les flux de données. |
+| [Outils de gestion en bloc](/help/using/reference/bulk-management-tools/bulk-management-intro.md) | Nous avons publié une nouvelle version de la feuille de calcul de gestion en bloc qui fonctionne sur les systèmes d’exploitation MacOS et Microsoft Windows et prend en charge la connexion Experience Cloud. |
+| [Améliorations des stratégies de fusion de profil](../features/profile-merge-rules/merge-rules-overview.md) | Nous avons publié une série d’améliorations pour [!UICONTROL Profile Merge Rules] : <ul><li>L’évaluation des segments est désormais prise en charge par lot, pour 100 appareils au maximum.</li><li>Nous avons amélioré la précision des rapports pour les populations de caractéristiques et de segments.</li><li>Nous avons amélioré la précision des fichiers de lots générés à l’aide des identifiants multi-appareils.</li><li>Nous avons mis à jour la documentation avec des cas d’utilisation plus détaillés pour chaque règle. Voir [Cas d’utilisation généraux des règles de fusion de profils](../features/profile-merge-rules/merge-rule-targeting-options.md), [Cas d’utilisation graphiques de périphérique externe](../features/profile-merge-rules/external-graph-use-cases.md) et [Cas d’utilisation graphiques de périphérique de lien de profil](../features/profile-merge-rules/profile-link-use-case.md).</li></ul> |
 
 
 ## Septembre 2019 {#aam-september-updates}
 
 | Rubrique | Description |
 |--- |----|
-| [HTTP Strict Transport Security](../overview/data-security-and-privacy/data-security.md#hsts) | Nous avons ajouté la prise en charge de [!DNL HTTP Strict-Transport-Security], une stratégie de sécurité Web qui protège contre le détournement de cookies et les attaques de dégradation de protocole. |
-| [Récence et fréquence](/help/using/features/segments/recency-and-frequency.md) | Nous avons mis à jour les exemples de plafonnement des fréquences dans l’article et ajouté des exemples de fonctionnement de la récence. |
-| <ul><li>[Créateur de segments](/help/using/features/segments/segment-builder.md)</li><li>[Rapports au niveau du segment dans l’Audience Marketplace](/help/using/features/audience-marketplace/marketplace-data-buyers/marketplace-buyer-billing.md)</li><li>[Rapports d&#39;identité de l&#39;Audience dans la vue de résumé des caractéristiques  ](/help/using/features/traits/trait-details-page.md)</li><li>[Rapports d&#39;identité de l&#39;Audience dans la vue de résumé des segments  ](/help/using/features/segments/segment-summary-view.md)</li><li>[Comment créer des caractéristiques de conversion](/help/using/features/traits/create-onboarded-rule-based-traits.md)</li><li>[Recommandations de caractéristiques](/help/using/features/segments/trait-recommendations.md)</li></ul> | Nous avons ajouté des vidéos didacticielles à plusieurs pages dans la documentation de l’Audience Manager. |
+| [HTTP Strict Transport Security](../overview/data-security-and-privacy/data-security.md#hsts) | Nous avons ajouté la prise en charge de [!DNL HTTP Strict-Transport-Security], une stratégie de sécurité web qui protège contre le détournement de cookies et les attaques par rétrogradation de protocole. |
+| [Récence et fréquence](/help/using/features/segments/recency-and-frequency.md) | Nous avons mis à jour les exemples de limitation de la fréquence dans l’article et ajouté des exemples de fonctionnement de la récence. |
+| <ul><li>[Créateur de segments](/help/using/features/segments/segment-builder.md)</li><li>[Création de rapports au niveau des segments dans l’Audience Marketplace](/help/using/features/audience-marketplace/marketplace-data-buyers/marketplace-buyer-billing.md)</li><li>[Création de rapports d’identité d’audience dans la vue Résumé des caractéristiques  ](/help/using/features/traits/trait-details-page.md)</li><li>[Création de rapports d’identité d’audience dans la vue Résumé du segment  ](/help/using/features/segments/segment-summary-view.md)</li><li>[Création de caractéristiques de conversion](/help/using/features/traits/create-onboarded-rule-based-traits.md)</li><li>[Recommandations de caractéristiques](/help/using/features/segments/trait-recommendations.md)</li></ul> | Nous avons ajouté des tutoriels vidéo à plusieurs pages dans la documentation de l’Audience Manager. |
 
 ## Août 2019 {#aam-august-updates}
 
 | Rubrique | Description |
 |--- |----|
-| [Destinations basées sur des personnes](../features/destinations/people-based-destinations-overview.md) | Destinations basées sur les personnes est un module complémentaire d’Audience Manager payante qui vous permet d’activer des segments d’audience propriétaires sur des environnements basés sur les personnes, tels que Facebook, à l’aide d’identifiants hachés, tels que des adresses électroniques. |
-| [Configuration d’Audiences personnalisées Twitter en tant que destination en libre-service basée sur un périphérique](../features/destinations/twitter-tailored-audiences.md) | Nous migrons les destinations Twitter vers un modèle de configuration en libre-service. Cet article explique ce que vous devez faire pour que les intégrations Twitter existantes continuent à fonctionner après la migration. |
-| [Exemples de facturation des Audiences Marketplace](../features/audience-marketplace/marketplace-data-buyers/marketplace-buyer-billing.md#billing-examples) | Nous avons ajouté un nouvel exemple, le cas 3, dans lequel nous détaillons le fonctionnement de la facturation pour les segments avec activation et modélisation des cas d’utilisation. |
+| [Destinations basées sur des personnes](../features/destinations/people-based-destinations-overview.md) | Les destinations basées sur les personnes sont un module complémentaire d’Audience Manager payante qui vous permet d’activer les segments d’audience propriétaires dans des environnements basés sur des personnes, tels que Facebook, à l’aide d’identifiants hachés, tels que des adresses électroniques. |
+| [Configuration d’audiences personnalisées Twitter en tant que destination basée sur un appareil en libre-service](../features/destinations/twitter-tailored-audiences.md) | Nous migrons les destinations Twitter vers un modèle de configuration en libre-service. Cet article explique ce que vous devez faire pour que les intégrations Twitter existantes continuent à fonctionner après la migration. |
+| [Exemples de facturation des Audiences Marketplace](../features/audience-marketplace/marketplace-data-buyers/marketplace-buyer-billing.md#billing-examples) | Nous avons ajouté un nouvel exemple, Cas 3, dans lequel nous détaillons le fonctionnement de la facturation pour les segments présentant des cas d’utilisation d’activation et de modélisation. |
 
 ## Juillet 2019 {#aam-july-updates}
 
-Il n&#39;y a pas de mises à jour majeures de la documentation à annoncer pour juillet.
+Aucune mise à jour majeure de la documentation n’est à annoncer pour le mois de juillet.
 
 ## Juin 2019 {#aam-june-updates}
 
 | Rubrique | Description |
 |--- |----|
-| [Page d’accueil des destinations](/help/using/features/destinations/destinations-home.md) | Le landing page de destination a un nouveau look. Lisez cette page pour en savoir plus sur la nouvelle mise en page. |
+| [Page d’accueil des destinations](/help/using/features/destinations/destinations-home.md) | La page d’entrée des destinations a une nouvelle apparence. Lisez cette page pour plus d’informations sur la nouvelle mise en page. |
 
 ## Mai 2019 {#aam-may-updates}
 
 | Rubrique | Description |
 |--- |----|
-| [API d&#39;Audience Manager](/help/using/api/rest-api-main/rest-api-main.md) | Nous sommes en train de [migrer toutes nos API](/help/using/api/api-swagger-migration.md) de la documentation du produit vers l’API Swagger. Les deux dernières API que nous avons migrées sont les suivantes : <ul><li>[API Modèles algorithmiques](https://bank.demdex.com/portal/swagger/index.html#/Algorithmic_Models_API)</li><li>[API Signaux dérivés](https://bank.demdex.com/portal/swagger/index.html#/Derived_Signals_API)</li></ul> |
-| [Flux de données privés](/help/using/features/audience-marketplace/marketplace-private-feeds.md#set-up-sharing-relationship) | Nous avons amélioré la documentation relative au partage de données propriétaires en utilisant des flux de données privés. Reportez-vous à la nouvelle section Comment configurer la relation de partage entre le fournisseur de données et l’acheteur de données. |
-| [Création d’une source de données sur plusieurs périphériques](/help/using/features/profile-merge-rules/merge-rules-start.md#settings) | Nous avons introduit un nouveau contrôle dans le processus pour créer ou modifier une source de données sur plusieurs périphériques, **Rétention des données pour les ID de client inactifs**. Vous pouvez maintenant définir la période de rétention des données pour les ID de client inactifs, en déterminant la durée pendant laquelle l’Audience Manager conserve les ID de client dans notre base de données après leur dernière consultation sur la plateforme d’Audience Manager. |
+| [API d’Audience Manager](/help/using/api/rest-api-main/rest-api-main.md) | Nous sommes en train de [migrer toutes nos API](/help/using/api/api-swagger-migration.md) de la documentation du produit vers l’API Swagger. Les deux dernières API que nous avons migrées sont les suivantes : <ul><li>[API de modèles algorithmiques](https://bank.demdex.com/portal/swagger/index.html#/Algorithmic_Models_API)</li><li>[API des signaux dérivés](https://bank.demdex.com/portal/swagger/index.html#/Derived_Signals_API)</li></ul> |
+| [Flux de données privés](/help/using/features/audience-marketplace/marketplace-private-feeds.md#set-up-sharing-relationship) | Nous avons amélioré la documentation relative au partage de données de deuxième niveau à l’aide de flux de données privés. Consultez la nouvelle section Comment configurer la relation de partage entre le fournisseur de données et l’acheteur de données. |
+| [Création d’une source de données multi-appareils](/help/using/features/profile-merge-rules/merge-rules-start.md#settings) | Nous avons introduit un nouveau contrôle dans le workflow pour créer ou modifier une source de données multi-appareils, **Rétention des données pour les ID de client inactifs**. Vous pouvez maintenant définir la période de conservation des données pour les ID de client inactifs, en déterminant la durée pendant laquelle l’Audience Manager conserve les ID de client dans notre base de données après leur dernière consultation sur la plateforme d’Audience Manager. |
 | [Limites d’utilisation](/help/using/features/administration/usage-limits.md) | Nous avons mis à jour la façon dont Audience Manager traite la limite des modèles algorithmiques. Audience Manager compte désormais uniquement les modèles algorithmiques *actifs* par rapport à la limite. |
-| [Intégrations personnalisées des partenaires](/help/using/integration/sending-audience-data/custom-partner-integrations.md) | Cette page répertorie les intégrations personnalisées entre Audience Manager et les partenaires de données. <br> Cloud de données d’Oracle - L’Audience Manager ingère des cookies et des données d’ID de mobile à partir de l’Oracle Data Cloud pour Audience Marketplace par le biais de fichiers de données entrants. Les spécifications d’intégration personnalisées décrites sur cette page font uniquement référence aux fichiers de données entrants contenant des ID mobiles (IDFA et ID de périphérique Android). |
+| [Intégrations personnalisées des partenaires](/help/using/integration/sending-audience-data/custom-partner-integrations.md) | Cette page répertorie les intégrations personnalisées entre Audience Manager et les partenaires de données. <br> Oracle Data Cloud : l’Audience Manager ingère des données de cookie et d’ID mobile à partir de l’Oracle Data Cloud pour l’Audience Marketplace par le biais de fichiers de données entrants. Les spécifications d’intégration personnalisées décrites sur cette page font uniquement référence aux fichiers de données entrants contenant des ID mobiles (IDFA et ID de périphérique Android). |
 
 ## Avril 2019 {#aam-april-updates}
 
 | Rubrique | Description |
 |--- |----|
 | [Obscurcissement des adresses IP](/help/using/features/administration/ip-obfuscation.md) | Votre entreprise peut souhaiter obscurcir l’adresse IP dans de nombreux pays en raison de la réglementation mondiale en matière de confidentialité. Audience Manager vous permet d’obsurcir les adresses IP des visiteurs de manière globale ou pays par pays. |
-| [Intégration Facebook WCA](/help/using/integration/integrating-third-party/facebook-wca-integration.md) | Cette page illustre le processus de création de pixels WCA (Audiences personnalisées du site Web Facebook) afin d’envoyer des segments d’audience d’Audience Manager basés sur le Web à Facebook, pour le ciblage des annonces en ligne avec une transparence accrue. |
+| [Intégration Facebook WCA](/help/using/integration/integrating-third-party/facebook-wca-integration.md) | Cette page illustre le processus de création de pixels d’audiences personnalisées du site web Facebook (WCA) dans le but d’envoyer des segments d’audience d’Audience Manager basés sur le web à Facebook, à des fins de ciblage des publicités en ligne avec une transparence améliorée. |
 | [Module d’Audience Manager pour le TCF de l’IAB](/help/using/overview/data-security-and-privacy/aam-iab-plugin.md) | Un aspect important des obligations de confidentialité que vous avez envers vos utilisateurs réside dans l’acquisition et le respect des choix des utilisateurs quant à la façon dont leurs données personnelles sont utilisées (c’est-à-dire les « objectifs ») et quant aux entités qui les utilisent (les « sociétés »). Adobe vous fournit les moyens de gérer et de communiquer les choix de confidentialité de vos utilisateurs via la [fonctionnalité d’accord préalable](https://docs.adobe.com/content/help/fr-FR/id-service/using/implementation/opt-in-service/optin-overview.html) et la prise en charge du [Transparency and Consent Framework (TCF) de l’IAB. ](https://iabtechlab.com/standards/gdpr-transparency-and-consent-framework/) <br> <br>  Cet article décrit les cas d’utilisation d’Audience Manager qui prennent en charge le TCF de l’IAB et l’implémentation de la prise en charge du TCF de l’IAB dans Audience Manager. |
 
 ## Mars 2019 {#aam-march-updates}
@@ -100,4 +99,3 @@ Il n&#39;y a pas de mises à jour majeures de la documentation à annoncer pour 
 | [Rapport de chevauchement de caractéristiques](../reporting/dynamic-reports/trait-trait-overlap-report.md) | Avec la mise à niveau vers une nouvelle version de [Tableau](../reference/system-components/components-data-processing.md#tableau), nous avons modifié la méthode de visualisation des données pour les rapports de chevauchement. Consultez la copie d’écran sur la page Rapport de chevauchement de caractéristiques. |
 | [Rapport de chevauchement de segments et de caractéristiques](../reporting/dynamic-reports/segment-trait-overlap-report.md) | Avec la mise à niveau vers une nouvelle version de [Tableau](../reference/system-components/components-data-processing.md#tableau), nous avons modifié la méthode de visualisation des données pour les rapports de chevauchement. Consultez la copie d’écran sur la page Rapport de chevauchement de segments et de caractéristiques. |
 | [Rapport de chevauchement de segments](../reporting/dynamic-reports/segment-segment-overlap-report.md) | Avec la mise à niveau vers une nouvelle version de [Tableau](../reference/system-components/components-data-processing.md#tableau), nous avons modifié la méthode de visualisation des données pour les rapports de chevauchement. Consultez la copie d’écran sur la page Rapport de chevauchement de segments. |
-
