Updating Old File for core commit

--- a/help/using/docs-updates/docs-2020.md
+++ b/help/using/docs-updates/docs-2020.md
@@ -4,15 +4,14 @@ seo-description: Une liste de la documentation nouvelle ou révisée publiée en
 seo-title: Mises à jour de la documentation 2020
 solution: Audience Manager
 title: Mises à jour de la documentation 2020
-feature: Overview
-translation-type: tm+mt
-source-git-commit: efe29244062e57ec89cc125c6ce94760e04844db
+feature: Présentation
+exl-id: 38af1e31-f0dd-4956-b456-ef2002f77707
+source-git-commit: 4d3c859cc4dc5294286680b0e63c287e0409f7fd
 workflow-type: tm+mt
-source-wordcount: '1097'
+source-wordcount: '1098'
 ht-degree: 60%
 
 ---
-
 
 # Mises à jour de la documentation 2020 {#documentation-updates}
 
@@ -25,22 +24,22 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
 
 | Rubrique | Description |
 |----|----|
-| [Audiences prédictives](/help/using/features/algorithmic-models/predictive-audiences.md) | <ul><li>**Clonage** de modèle des Audiences prédictives : Vous pouvez désormais cloner des modèles existants et modifier leur configuration en fonction de vos besoins. Pour plus d&#39;informations, consultez [Clonage et modification des modèles d&#39;Audience prédictive](/help/using/features/algorithmic-models/predictive-audiences.md#clone-predictive-audiences).</li><li>**Classification** par lots des Audiences prédictives : Outre la classification des visiteurs selon des personnalités distinctes en temps réel, les Audiences prédictives prennent désormais en charge la classification par lot, ce qui vous permet de classer les utilisateurs intégrés et de les activer dans les destinations par lot.</li></ul> |
-| [Rapports de chevauchement](/help/using/reporting/dynamic-reports/dynamic-reports.md) | Nous avons mis à jour la méthodologie que nous utilisons pour calculer les rapports de chevauchement ([Caractéristique à caractéristique](/help/using/reporting/dynamic-reports/trait-trait-overlap-report.md), [Segment à caractéristique](/help/using/reporting/dynamic-reports/segment-trait-overlap-report.md), [Segment à segment](/help/using/reporting/dynamic-reports/segment-segment-overlap-report.md)). Le calcul des rapports de chevauchement est désormais basé sur les signatures de rapports et de hachage minimum (plutôt que sur [l’échantillonnage de données 1/54](/help/using/reporting/report-sampling.md#data-sampling-ratio)). |
+| [Audiences prédictives](/help/using/features/algorithmic-models/predictive-audiences.md) | <ul><li>**Clonage des modèles de Predictive Audiences** : Vous pouvez désormais cloner des modèles existants et modifier leur configuration en fonction de vos besoins. Pour plus d’informations, consultez [Clonage et modification des modèles d’audience prédictive](/help/using/features/algorithmic-models/predictive-audiences.md#clone-predictive-audiences) .</li><li>**Classification par lot des audiences prédictives** : Outre la classification des visiteurs selon des personnalités distinctes en temps réel, Predictive Audiences prend désormais en charge la classification par lots, ce qui vous permet de classer les utilisateurs intégrés et de les activer dans des destinations par lot.</li></ul> |
+| [Rapports de chevauchement](/help/using/reporting/dynamic-reports/dynamic-reports.md) | Nous avons mis à jour la méthodologie que nous utilisons pour calculer les rapports de chevauchement ([Caractéristique à caractéristique](/help/using/reporting/dynamic-reports/trait-trait-overlap-report.md), [Segment à caractéristique](/help/using/reporting/dynamic-reports/segment-trait-overlap-report.md), [Segment à segment](/help/using/reporting/dynamic-reports/segment-segment-overlap-report.md)). Le calcul des rapports de chevauchement est désormais basé sur les uniques de rapports et les signatures MinHash (plutôt que sur [1/54 échantillonnage de données](/help/using/reporting/report-sampling.md#data-sampling-ratio)). |
 
 
 ## Septembre 2020 {#aam-september-updates}
 
 | Rubrique | Description |
 |---- |----|
-| [Accessibilité dans l&#39;Audience Manager](/help/using/overview/accessibility-in-aam.md) | L&#39;accessibilité se rapporte à une série de fonctions qui rendent un produit logiciel utilisable, avec le moins d&#39;effort possible de la part d&#39;utilisateurs ayant divers handicaps, tels que visuels, auditifs, cognitifs, moteurs ou autres. Pour faciliter l&#39;utilisation de l&#39;Audience Manager pour tous, nous avons développé la prise en charge de plusieurs fonctions d&#39;accessibilité, détaillées dans cet article. |
-| [Nom ](/help/using/integration/sending-audience-data/batch-data-transfer-explained/inbound-s3-filenames.md) de fichier S3 entrant et nom de fichier FTP  [entrant](/help/using/integration/sending-audience-data/batch-data-transfer-explained/inbound-ftp-filenames.md) | Nous avons mis à jour les définitions et fourni des exemples pour les champs `DPID` et `DPID_TARGET_DATA_OWNER` dans la syntaxe du nom de fichier. |
+| [Accessibilité en Audience Manager](/help/using/overview/accessibility-in-aam.md) | L’accessibilité fait référence à une série de fonctionnalités qui rendent un produit logiciel utilisable, avec le moins d’effort possible de la part d’utilisateurs présentant divers handicaps, tels que visuels, auditifs, cognitifs, moteurs ou autres. Afin de faciliter l’Audience Manager pour tous, nous avons développé la prise en charge de plusieurs fonctionnalités d’accessibilité, détaillées dans cet article. |
+| [Noms ](/help/using/integration/sending-audience-data/batch-data-transfer-explained/inbound-s3-filenames.md) de fichiers S3 entrants et noms de fichiers FTP  [entrants](/help/using/integration/sending-audience-data/batch-data-transfer-explained/inbound-ftp-filenames.md) | Nous avons mis à jour les définitions et fourni des exemples pour les champs `DPID` et `DPID_TARGET_DATA_OWNER` dans la syntaxe du nom de fichier. |
 
 ## Août 2020 {#aam-august-updates}
 
 | Rubrique | Description |
 |---- |----|
-| [Correspondance client Google pour les destinations basées sur les personnes](../features/destinations/people-based-destinations-prerequisites.md#gcm) | Vous pouvez désormais utiliser [!UICONTROL People-Based Destinations] pour cible des utilisateurs via [!DNL Google Customer Match]. Avant de pouvoir utiliser [!UICONTROL People-Based Destinations] pour envoyer vos segments d&#39;audience propriétaire vers une destination [!DNL Google Customer Match], il est obligatoire que [!DNL Google] vous ajoute à leur liste autorisée. Pour plus d’informations, consultez la documentation [Destinations basées sur les personnes](../features/destinations/people-based-destinations-prerequisites.md#gcm). |
+| [Correspondance client Google pour les destinations basées sur les personnes](../features/destinations/people-based-destinations-prerequisites.md#gcm) | Vous pouvez désormais utiliser [!UICONTROL People-Based Destinations] pour cibler les utilisateurs via [!DNL Google Customer Match]. Avant de pouvoir utiliser [!UICONTROL People-Based Destinations] pour envoyer vos segments d’audience propriétaires à une destination [!DNL Google Customer Match], il est obligatoire que [!DNL Google] vous ajoute à leur liste autorisée. Pour plus d’informations, consultez la documentation [Destinations basées sur les personnes](../features/destinations/people-based-destinations-prerequisites.md#gcm) . |
 | [Nouveaux serveurs SFTP](../faq/faq-data-collection.md) | Vous pouvez désormais utiliser les nouveaux serveurs [!DNL SFTP] ([!DNL ftp-in-gtw] et [!DNL ftp-out-gtw]) qui utilisent [!DNL AWS SFTP Gateway] sur [!DNL S3]. |
 
 
@@ -48,15 +47,15 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
 
 | Rubrique | Description |
 |---- |----|
-| [Partage d’audiences entre Audience Manager et Adobe Experience Platform](/help/using/integration/integration-aep/aam-aep-audience-sharing.md#aep-aam-segment-population-differences) | La nouvelle section, **Comprendre les différences de population des segments entre l&#39;Audience Manager et l&#39;Experience Platform**, décrit les raisons possibles pour lesquelles le nombre de populations peut varier entre l&#39;Experience Platform et l&#39;Audience Manager. |
-| [Prise en main des API REST d’Audience Manager](/help/using/api/rest-api-main/aam-api-getting-started.md#jwt) | Nous avons ajouté une nouvelle section, **Authentification JWT (Service Account) à l&#39;aide de[!DNL Adobe I/O]**. Reportez-vous à cette section pour vous authentifier auprès des API d&#39;Audience Manager à l&#39;aide de [!DNL Adobe I/O]. |
+| [Partage d’audiences entre Audience Manager et Adobe Experience Platform](/help/using/integration/integration-aep/aam-aep-audience-sharing.md#aep-aam-segment-population-differences) | La nouvelle section **Comprendre les différences de population de segment entre l’Audience Manager et l’Experience Platform** décrit les raisons possibles pour lesquelles les nombres de population peuvent varier entre l’Experience Platform et l’Audience Manager. |
+| [Prise en main des API REST d’Audience Manager](/help/using/api/rest-api-main/aam-api-getting-started.md#jwt) | Nous avons ajouté une nouvelle section, **Authentification JWT (compte de service) à l’aide de[!DNL Adobe I/O]**. Reportez-vous à cette section pour vous authentifier aux API d’Audience Manager à l’aide de [!DNL Adobe I/O]. |
 
 ## Juin 2020 {#aam-june-updates}
 
 | Rubrique | Description |
 |---- |----|
-| [Prise en charge du contrôle des exportations de données d&#39;Audience Manager dans Adobe Experience Platform](/help/using/integration/integration-aep/aam-aep-audience-sharing.md#aam-data-export-control-in-aep) | La nouvelle section de l’article Partage des Audiences entre l’Audience Manager et Adobe Experience Platform comprend un mappage entre les contrôles d’exportation des données d’Audience Manager et les étiquettes d’utilisation des données Experience Platform. |
-| [Module d’Audience Manager pour le TCF de l’IAB ](../overview/data-security-and-privacy/aam-iab-plugin.md) | En continuant de mettre l’Adobe sur la protection des renseignements personnels par conception, nous mettons à niveau le module externe d’Audience Manager pour IAB TCF vers la version 2.0 de l’IAB Transparency &amp; Consent Framework (TCF), à compter du 10 juin 2020. Les clients qui ont mis en oeuvre le module externe d’Audience Manager pour IAB TCF doivent effectuer la mise à niveau vers la version 2.0 d’ici le 15 août 2020, afin de continuer à utiliser cette fonctionnalité. Après le 15 août 2020, la version 1.1 sera abandonnée et ne sera plus prise en charge. |
+| [Prise en charge du contrôle de l’exportation des données d’Audience Manager dans Adobe Experience Platform](/help/using/integration/integration-aep/aam-aep-audience-sharing.md#aam-data-export-control-in-aep) | La nouvelle section de l’article Partage d’audiences entre l’Audience Manager et Adobe Experience Platform comprend un mappage entre les contrôles d’exportation des données d’Audience Manager et les libellés d’utilisation des données d’Experience Platform. |
+| [Module d’Audience Manager pour le TCF de l’IAB ](../overview/data-security-and-privacy/aam-iab-plugin.md) | En continuant à se concentrer sur la Confidentialité dès la conception, nous mettons à niveau le module externe d’Audience Manager pour IAB TCF vers la version 2.0 du Transparency &amp; Consent Framework (TCF) de l’IAB, à compter du 10 juin 2020. Les clients qui ont mis en oeuvre le module d’Audience Manager pour IAB TCF doivent effectuer la mise à niveau vers la version 2.0 d’ici le 15 août 2020, afin de continuer à utiliser cette fonctionnalité. À compter du 15 août 2020, la version 1.1 sera obsolète et ne sera plus prise en charge. |
 
 ## Mai 2020 {#aam-may-updates}
 
@@ -69,7 +68,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
 | Rubrique | Description |
 |---- |----|
 | [Audiences prédictives](../features/algorithmic-models/predictive-audiences.md) | [!UICONTROL Predictive Audiences] vous aide à classer en temps réel une audience inconnue en différentes personas à l’aide de techniques avancées de la science des données. <br><br> Dans un contexte marketing, une persona est un segment d’audience défini par des visiteurs, des utilisateurs ou des acheteurs potentiels qui partagent un ensemble spécifique de caractéristiques comme des données démographiques, des habitudes de navigation, un historique des achats, etc.Les modèles de <br><br>[!UICONTROL Predictive Audiences] approfondissent encore ce concept en vous permettant d’utiliser les capacités d’apprentissage automatique d’Audience Manager pour classer les audiences inconnues en différentes personas. <br><br>Pour ce faire, Audience Manager calcule la propension de votre audience propriétaire inconnue pour un ensemble d’audiences propriétaires connues. |
-| Autres améliorations de [!UICONTROL Profile Merge Rules] | [!UICONTROL Profile Merge Rules] offre aux clients d’Audience Manager la possibilité de définir, gérer et activer des segments d’audience en fonction de l’identité plutôt que des appareils. <br><br> À compter du 29 avril, les clients d’Audience Manager pourront mieux comprendre la ventilation des populations d’ID de périphérique et d’ID inter-périphériques pour les caractéristiques et les segments dans la segmentation individuelle et le rapports en masse dans l’interface utilisateur de l’Audience Manager. <br><br> Cela permettra l’obtention de meilleures informations sur l’identité au sein d’Audience Manager. Les clients disposeront ainsi d’une vision globale de la population totale de segments par appareil, par personne et par foyer. Les exportations en bloc de caractéristiques à la fois d’identifiants d’appareils et multi-appareils seront également mises à jour pour refléter ces améliorations.<br><br>  Des mises à jour spécifiques incluent la possibilité : <ul><li>de créer des rapports concernant les [identifiants multi-appareils](../reference/ids-in-aam.md) dans les rapports [généraux](../reporting/general-reports.md) et de [tendances](../reporting/trend-reports.md) ;</li><li>d’améliorer le [!UICONTROL Trait Selector] du [Créateur de segments](../features/segments/segment-builder.md) afin d’inclure les populations de caractéristiques en dehors des [identifiants CRM](../reference/ids-in-aam.md) ;</li><li>de créer des exportations de caractéristiques précises en dehors des [identifiants multi-appareils](../reference/ids-in-aam.md) ;</li><li>de créer des exportations de caractéristiques précises en dehors des [identifiants d’appareils](../reference/ids-in-aam.md) (les caractéristiques authentifiées devraient en être exclues) ;</li><li>de renvoyer les valeurs correctes des caractéristiques associées aux [identifiants CRM](../reference/ids-in-aam.md) lorsqu’elles font l’objet d’une requête à l’aide de l’outil [BAAAM](../reference/bulk-management-tools/bulk-management-intro.md).</li></ul> |
+| Autres améliorations de [!UICONTROL Profile Merge Rules] | [!UICONTROL Profile Merge Rules] offre aux clients d’Audience Manager la possibilité de définir, gérer et activer des segments d’audience en fonction de l’identité plutôt que des appareils. <br><br> À compter du 29 avril, les clients d’Audience Manager seront en mesure de mieux comprendre la ventilation des populations d’identifiants d’appareils et multi-appareils pour les caractéristiques et les segments à la fois dans la segmentation individuelle et la création de rapports en masse dans l’interface utilisateur de l’Audience Manager. <br><br> Cela permettra l’obtention de meilleures informations sur l’identité au sein d’Audience Manager. Les clients disposeront ainsi d’une vision globale de la population totale de segments par appareil, par personne et par foyer. Les exportations en bloc de caractéristiques à la fois d’identifiants d’appareils et multi-appareils seront également mises à jour pour refléter ces améliorations.<br><br>  Des mises à jour spécifiques incluent la possibilité : <ul><li>de créer des rapports concernant les [identifiants multi-appareils](../reference/ids-in-aam.md) dans les rapports [généraux](../reporting/general-reports.md) et de [tendances](../reporting/trend-reports.md) ;</li><li>d’améliorer le [!UICONTROL Trait Selector] du [Créateur de segments](../features/segments/segment-builder.md) afin d’inclure les populations de caractéristiques en dehors des [identifiants CRM](../reference/ids-in-aam.md) ;</li><li>de créer des exportations de caractéristiques précises en dehors des [identifiants multi-appareils](../reference/ids-in-aam.md) ;</li><li>de créer des exportations de caractéristiques précises en dehors des [identifiants d’appareils](../reference/ids-in-aam.md) (les caractéristiques authentifiées devraient en être exclues) ;</li><li>de renvoyer les valeurs correctes des caractéristiques associées aux [identifiants CRM](../reference/ids-in-aam.md) lorsqu’elles font l’objet d’une requête à l’aide de l’outil [BAAAM](../reference/bulk-management-tools/bulk-management-intro.md).</li></ul> |
 | [Principaux problèmes signalés au service clientèle](../support-issues/support-issues-overview.md) | Nous avons ajouté une nouvelle section à notre portail de documentation, qui répond aux questions les plus fréquemment posées à l’équipe de notre service clientèle. |
 
 ## Mars 2020 {#aam-march-updates}
